[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://assets/prev.png" type="Texture" id=4]
[ext_resource path="res://assets/next.png" type="Texture" id=5]

[node name="Shop" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="TypeButtons" type="Node2D" parent="."]
position = Vector2( 329.86, 574.428 )

[node name="NextType" type="TextureButton" parent="TypeButtons"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = 257.0
margin_top = -440.0
margin_right = 307.0
margin_bottom = -376.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevType" type="TextureButton" parent="TypeButtons"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = -267.0
margin_top = -437.0
margin_right = -217.0
margin_bottom = -373.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )

[node name="ItemButtons" type="Node2D" parent="."]
position = Vector2( 329.86, 574.428 )

[node name="NextItem" type="TextureButton" parent="ItemButtons"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = 263.0
margin_top = 18.0
margin_right = 313.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevItem" type="TextureButton" parent="ItemButtons"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = -276.0
margin_top = 13.0
margin_right = -226.0
margin_bottom = 87.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )

[node name="Item" type="Node2D" parent="."]
position = Vector2( 372.054, 607.832 )

[node name="TypeLabel" type="Label" parent="."]
margin_left = 73.0
margin_top = 149.0
margin_right = 673.0
margin_bottom = 233.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BALLS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="."]
margin_left = 235.584
margin_top = 941.71
margin_right = 506.584
margin_bottom = 1040.71
theme = ExtResource( 2 )
text = "buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Button" parent="."]
margin_left = 235.584
margin_top = 1077.71
margin_right = 506.584
margin_bottom = 1176.71
theme = ExtResource( 2 )
text = "go back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="TypeButtons/NextType" to="." method="_on_NextType_pressed"]
[connection signal="pressed" from="TypeButtons/PrevType" to="." method="_on_PrevType_pressed"]
[connection signal="pressed" from="ItemButtons/NextItem" to="." method="_on_NextItem_pressed"]
[connection signal="pressed" from="ItemButtons/PrevItem" to="." method="_on_PrevItem_pressed"]
[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="GoBack" to="." method="_on_GoBack_pressed"]
